--- a/semana1.html
+++ b/semana1.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semana 1</title>
+
+    
 </head>
 <body>
-    
+    <h2>Semana 1</h2>
+
+    <script type="text/javascript">
+        document.write("Ola sala / Ola mundo");
+
+        let nome = prompt("Digite seu nome", "");
+        if(confirm("Quer ver seu nome?")){
+            alert("seu nome é "+nome);
+        }
+    </script><br />
+
+
+    <a href="index.html">Voltar</a>
 </body>
 </html>
