--- a/semana1.html
+++ b/semana1.html
@@ -18,9 +18,14 @@
         if(confirm("Quer ver seu nome?")){
             alert("seu nome é "+nome);
         }
+
+        for (let i = 1; i <= 6; i++) {
+            document.write("<h"+i+">Ola Sala!</h"+i+">")
+        }
     </script><br />
 
 
+    <a href="exerc1.html">Exercicio 1</a>
     <a href="index.html">Voltar</a>
 </body>
 </html>
