--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,300;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,300;1,700&family=Ubuntu:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="CSS/styles.css" />
     <title>Laboratorio de Engenharia de software</title>
-</head>
-<body>
-    <nav>
-        <ul>
-        <li>
-            <a href="semana1.html">Semana 1</a>
-        </li>
-    </ul>
-    </nav>
-</body>
+  </head>
+  <body>
+    <main class="mainIdex">
+      <nav>
+        <div class="title">
+          <div class="brdr">
+            <h1>Laboratorio de Engenharia de software</h1>
+          </div>
+        </div>
+      </nav>
+      <section>
+        <ul class="menu">
+          <li class="limenu">
+            <a href="./Semana1/">Semana 1</a>
+          </li>
+          <li class="limenu">
+            <a href="./Semana1/">Semana 2</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
