coreção de texto

--- a/Semana2/lista.html
+++ b/Semana2/lista.html
@@ -28,7 +28,7 @@
            let valor = document.getElementById("elemento").value;
         if(valor === ""){
           alert("Preencha o campo");
-          document.getElementById("obrigatorio").innerHTML = "Campo brigatorio *";
+          document.getElementById("obrigatorio").innerHTML = "Campo Obrigatório *";
           return;
         }
           vetor.push(valor.toUpperCase());
