--- a/Semana1/exerc2.html
+++ b/Semana1/exerc2.html
@@ -62,7 +62,7 @@
     <br />
 
     <a href="exerc2.html">Testar de novo</a><br />
-    <a href="index.html">Voltar</a>
+    <a href="index.html">🔙Voltar</a>
     </main>
   </body>
 </html>
