--- a/Semana1/exerc4.html
+++ b/Semana1/exerc4.html
@@ -30,7 +30,7 @@
       </nav>
 
     <a href="exerc4.html">Testar de novo</a><br />
-    <a href="index.html">Voltar</a>
+    <a href="index.html">🔙Voltar</a>
 
     <script type="text/javascript">
       let numero = prompt("Informe um número positivo e inteiro: ", "");
