--- a/Semana1/exerc1.html
+++ b/Semana1/exerc1.html
@@ -51,7 +51,7 @@
 
     <a href="exerc1.html">Testar de novo</a><br />
 
-    <a href="index.html">Voltar</a>
+    <a href="index.html">🔙Voltar</a>
     </main>
   </body>
 </html>
