--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <li>
       <a href="./Semana2/">Semana 2</a>
     </li>
+    <li>
+      <a href="./Semana3/">Semana 3</a>
+    </li>
   </ul>
 </section>
         </main>
