--- a/Semana3/hora.html
+++ b/Semana3/hora.html
@@ -43,9 +43,7 @@
         console.log(d.toLocaleTimeString());
         document.getElementById("hora").innerHTML = d.toLocaleTimeString();
       }
-      setInterval(() => {
-          getHours();
-       }, 1000);
+      setInterval(() => {getHours();   }, 1000);
     </script>
   </body>
 </html>
