--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,300;1,700&display=swap"  rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,300;1,700&family=Ubuntu:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&display=swap" rel="stylesheet"/>
       
-        <link rel="stylesheet" href="CSS/styles.css" />;
+        <link rel="stylesheet" href="CSS/styles.css" />
         <title>Laboratorio de Engenharia de software</title>
         </head>
         <body>
@@ -33,6 +33,9 @@
     </li>
     <li>
       <a href="./Semana3/">Semana 3</a>
+    </li>
+    <li>
+      <a href="./Semana4/">Semana 4</a>
     </li>
   </ul>
 </section>
