fix link index.html

--- a/Semana3/index.html
+++ b/Semana3/index.html
@@ -43,7 +43,7 @@
       </section>
       <br />
       <br />
-      <a href="../../index.html">Laboratorio de Engenharia de software</a><br />
+      <a href="../index.html">Laboratorio de Engenharia de software</a><br />
     </main>
   </body>
 </html>
