--- a/Semana2/index.html
+++ b/Semana2/index.html
@@ -37,7 +37,7 @@
       </section>
       <br />
       <br />
-      <a href="../../index.html">Laboratorio de Engenharia de software</a><br />
+      <a href="../index.html">Laboratorio de Engenharia de software</a><br />
     </main>
   </body>
 </html>
