--- a/semana4/index.html
+++ b/semana4/index.html
@@ -75,7 +75,7 @@
 
       </section>
     </div>
-    <a href="../../index.html">Laboratorio de Engenharia de software</a><br />
+    <a href="../index.html">Laboratorio de Engenharia de software</a><br />
   </main>
 
   <script src="../CSS/bootstrap-5.3.1/js/bootstrap.bundle.min.js"></script>
