fix name images

--- a/Semana5/index.html
+++ b/Semana5/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
     </nav>
-    <img src="/Semana5/images/reflesh.png" alt="">
+  
     <section>
       <div id="content" class="conteudo">
       
@@ -88,7 +88,7 @@
       document.getElementById('content').appendChild(h1).setAttribute('class', 'h1_');
       //ação de reset
       let image = document.createElement('img');
-      image.src = '/Semana5/images/reflesh.png';
+      image.src = '/Semana5/images/reset.png';
       image.setAttribute('onclick', ' location.reload()');
       document.getElementById('content').appendChild(image).setAttribute('class', 'reflesh');
 
@@ -117,7 +117,7 @@
       //ação adicionar...
       let divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/mais.png';
+      image.src = '/Semana5/images/mais_.png';
       image.setAttribute('onclick', 'addH();');
 
       divBtn.appendChild(image).setAttribute('class', 'mais');
@@ -126,7 +126,7 @@
       // ação subtrair...
       divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/menos.png';
+      image.src = '/Semana5/images/menos_.png';
       image.setAttribute('onclick', 'lessH();');
 
       divBtn.appendChild(image).setAttribute('class', 'menos');
@@ -150,7 +150,7 @@
       //ação adicionar...
       divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/mais.png';
+      image.src = '/Semana5/images/mais_.png';
 
       image.setAttribute('onclick', 'addM();');
 
@@ -160,7 +160,7 @@
       // ação subtrair...
       divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/menos.png';
+      image.src = '/Semana5/images/menos_.png';
       image.setAttribute('onclick', 'lessM();');
 
       divBtn.appendChild(image).setAttribute('class', 'menos');
