--- a/Semana5/index.html
+++ b/Semana5/index.html
@@ -87,7 +87,7 @@
       document.getElementById('content').appendChild(h1).setAttribute('class', 'h1_');
       //ação de reset
       let image = document.createElement('img');
-      image.src = '/Semana5/images/reset.png';
+      image.src = '/Semana5/images/reset.jpeg';
       image.setAttribute('onclick', ' location.reload()');
       document.getElementById('content').appendChild(image).setAttribute('class', 'reflesh');
 
