--- a/Semana5/index.html
+++ b/Semana5/index.html
@@ -87,7 +87,7 @@
       document.getElementById('content').appendChild(h1).setAttribute('class', 'h1_');
       //ação de reset
       let image = document.createElement('img');
-      image.src = '/Semana5/images/reset.jpeg';
+      image.src = 'https://e7.pngegg.com/pngimages/251/977/png-clipart-reload-computer-icons-graphy-metallica-others-text-photography-thumbnail.png';
       image.setAttribute('onclick', ' location.reload()');
       document.getElementById('content').appendChild(image).setAttribute('class', 'reflesh');
 
