--- a/Semana5/index.html
+++ b/Semana5/index.html
@@ -87,7 +87,7 @@
       document.getElementById('content').appendChild(h1).setAttribute('class', 'h1_');
       //ação de reset
       let image = document.createElement('img');
-      image.src = 'https://e7.pngegg.com/pngimages/251/977/png-clipart-reload-computer-icons-graphy-metallica-others-text-photography-thumbnail.png';
+      image.src = 'https://cdn-icons-png.flaticon.com/512/126/126502.png';
       image.setAttribute('onclick', ' location.reload()');
       document.getElementById('content').appendChild(image).setAttribute('class', 'reflesh');
 
@@ -101,13 +101,13 @@
 
       let divPicture = document.createElement('div');
       let picture = document.createElement('img');
-      picture.src = '/Semana5/images/homem.png';
+      picture.src = 'https://cdn-icons-png.flaticon.com/512/610/610120.png';
       divPicture.appendChild(picture).setAttribute('class', 'img_homem');
       document.getElementById('content').appendChild(divPicture).setAttribute('class', 'picture');
 
       divPicture = document.createElement('div');
       picture = document.createElement('img');
-      picture.src = '/Semana5/images/mulher.png';
+      picture.src = 'https://cdn-icons-png.flaticon.com/512/180/180675.png';
       divPicture.appendChild(picture).setAttribute('class', 'img_homem');
       document.getElementById('content').appendChild(divPicture).setAttribute('class', 'picture');
 
@@ -116,7 +116,7 @@
       //ação adicionar...
       let divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/mais_.png';
+      image.src = '/https://cdn-icons-png.flaticon.com/512/4315/4315609.png';
       image.setAttribute('onclick', 'addH();');
 
       divBtn.appendChild(image).setAttribute('class', 'mais');
@@ -125,7 +125,7 @@
       // ação subtrair...
       divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/menos_.png';
+      image.src = 'https://cdn-icons-png.flaticon.com/512/5974/5974627.png';
       image.setAttribute('onclick', 'lessH();');
 
       divBtn.appendChild(image).setAttribute('class', 'menos');
@@ -149,7 +149,7 @@
       //ação adicionar...
       divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/mais_.png';
+      image.src = 'https://cdn-icons-png.flaticon.com/512/4315/4315609.png';
 
       image.setAttribute('onclick', 'addM();');
 
@@ -159,7 +159,7 @@
       // ação subtrair...
       divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/Semana5/images/menos_.png';
+      image.src = 'https://cdn-icons-png.flaticon.com/512/5974/5974627.png';
       image.setAttribute('onclick', 'lessM();');
 
       divBtn.appendChild(image).setAttribute('class', 'menos');
