--- a/Semana5/index.html
+++ b/Semana5/index.html
@@ -116,7 +116,7 @@
       //ação adicionar...
       let divBtn = document.createElement('div');
       image = document.createElement('img');
-      image.src = '/https://cdn-icons-png.flaticon.com/512/4315/4315609.png';
+      image.src = 'https://cdn-icons-png.flaticon.com/512/4315/4315609.png';
       image.setAttribute('onclick', 'addH();');
 
       divBtn.appendChild(image).setAttribute('class', 'mais');
