--- a/Semana5/index.html
+++ b/Semana5/index.html
@@ -136,7 +136,7 @@
       divScore.appendChild(title).setAttribute('class', 'titulo');
 
       divNum = document.createElement('input');
-      // divNum.setAttribute('readonly', true);
+      divNum.setAttribute('readonly', true);
 
 
       divNum.setAttribute('value', somaHomens);
