--- a/Semana5/index.html
+++ b/Semana5/index.html
@@ -82,8 +82,7 @@
 
       /*------------------------------------- ######## --------------------------------------*/
       let h1 = document.createElement('h1');
-      let content = document.createTextNode('Total');
-      h1.appendChild(content);
+      h1.textContent='Total';
       document.getElementById('content').appendChild(h1).setAttribute('class', 'h1_');
       //ação de reset
       let image = document.createElement('img');
