--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <li>
       <a href="./Semana5/">Semana 5</a>
     </li>
+    <li>
+      <a href="./Semana6/">Semana 6</a>
+    </li>
   </ul>
 </section>
         </main>
