--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <li>
       <a href="./Semana6/">Semana 6</a>
     </li>
+    <li>
+      <a href="./Semana7/">Semana 7</a>
+    </li>
   </ul>
 </section>
         </main>
